# SuperPlayer

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/zyl/superplayer/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: FFDecode.cpp  FFDecode.h  FFDemux.cpp  FFDemux.h  FFPlayerBuilder.cpp  FFPlayerBuilder.h  FFResample.cpp  FFResample.h  GLVideoView.cpp  GLVideoView.h  IAudioPlay.cpp  IAudioPlay.h  IDecode.cpp  IDecode.h  IDemux.cpp  IDemux.h  IObserver.cpp  IObserver.h  IPlayer.cpp  IPlayer.h  IPlayerBuilder.cpp  IPlayerBuilder.h  IPlayerProxy.cpp  IPlayerProxy.h  IResample.cpp  IResample.h  IVideoView.cpp  IVideoView.h  SLAudioPlay.cpp  SLAudioPlay.h  XData.cpp  XData.h  XEGL.cpp  XEGL.h  XLog.cpp  XLog.h  XParameter.cpp  XParameter.h  XShader.cpp  XShader.h  (+5 more)
app/src/main/java/com/zyl/superplayer/: MainActivity.java  XPlayView.java
app/src/main/res/drawable/: ic_pause_black_15dp.xml  ic_play_arrow_black_15dp.xml  ic_skip_next_black_15dp.xml  ic_skip_previous_black_15dp.xml
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/zyl/superplayer/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
